--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/css/market.css
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/css/market.css
@@ -53,12 +53,11 @@
 		margin-right: inherit;
 	}
 
-	.modal {
+/*	.modal {
 		left: 50%;
 		bottom: auto;
 		right: auto;
 		padding: 0;
-		width: 500px;
 		margin-left: -250px;
 		background-color: #ffffff;
 		border: 1px solid #999999;
@@ -67,7 +66,7 @@
 		-webkit-box-shadow: 0 3px 9px rgba(0, 0, 0, 0.5);
 		box-shadow: 0 3px 9px rgba(0, 0, 0, 0.5);
 		background-clip: padding-box;
-	}
+	}*/
 
 	.modal.container {
 		max-width: none;
