--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/views/content.html
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/views/content.html
@@ -47,7 +47,7 @@
   <div class="collapse navbar-collapse navbar-ex1-collapse"> 
     <ul class="navbar-form navbar-left" role="search">
 		<div class="form-group col-xs-6">
-			<input id="input-busqueda" type="search" class="form-control input-md" placeholder="Buscar">
+			<input id="input-busqueda" type="search" class="form-control input-md" placeholder="Buscar" style="height: initial;">
 		</div>
 		<ul class="btn-group">
 			<button onclick="buscarContenidos();" class="btn btn-primary" style="margin-top: initial;">
@@ -112,6 +112,133 @@
 	<a href="https://twitter.com/share" class="twitter-share-button" data-lang="es" data-count="none" data-dnt="true">Twittear</a>
 	<div class="fb-like" data-href="http://127.0.0.1:8080/SERVER-MODULE-PRESENTATION/" data-layout="box_count" data-action="like" data-show-faces="true" data-share="true"></div>
 	</div>
+
+<!-- RESULTADOS DE BUSQUEDA -->
+<div id="resultadoBusqueda" class="container hide">
+    <table class="table table-hover">
+        <thead>
+            <tr>
+                <th></th>
+                <th>Nombre</th>
+                <th>Descripcion</th>
+                <th>Precio</th>
+                <th>Calificacion</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr href="views/content.html?id=1" id="datosContenido1">
+                <td><img src="//placehold.it/50x50" class="img-responsive"></td>
+                <td><a href="views/content.html?id=1">Nombre</a></td>
+                <td>Nullam sapien massa, aliquam in cursus ut, ullamcorper in tortor. Aliquam
+                    mauris arcu, tristique a lobortis vitae, condimentum feugiat justo.</td>
+                <td>4.0</td>
+                <td>2/5</td>
+            </tr>
+            <tr id="datosContenido2">
+                <td><img src="//placehold.it/50x50" class="img-responsive"></td>
+                <td><a href="views/content.html?id=1">Nombre</a></td>
+                <td>jdhjskhd asjhdjk ashjkd jkshdjksh jkhjk dhjkashdjkhasjkdhajkshdjkadjksh
+                    jkasd</td>
+                <td>Gratis</td>
+                <td>4/5</td>
+            </tr>
+            <tr id="datosContenido3">
+				<td><img src="//placehold.it/50x50" class="img-responsive"></td>
+                <td><a href="views/content.html?id=1">Nombre</a></td>
+                <td>jdhjskhd asjhdjk ashjkd jkshdjksh jkhjk dhjkashdjkhasjkdhajkshdjkadjksh
+                    jkasd</td>
+                <td>12.0</td>
+                <td>5/5</td>
+            </tr>
+            <tr id="datosContenido4">
+                <td><img src="//placehold.it/50x50" class="img-responsive"></td>
+                <td><a href="views/content.html?id=1">Nombre</a></td>
+                <td>jdhjskhd asjhdjk ashjkd jkshdjksh jkhjk dhjkashdjkhasjkdhajkshdjkadjksh
+                    jkasd</td>
+                <td>12.0</td>
+                <td>5/5</td>
+            </tr>
+            <tr id="datosContenido5">
+                <td>
+                    <img src="//placehold.it/50x50" class="img-responsive">
+                </td>
+                <td><a href="views/content.html?id=1">Nombre</a></td>
+                <td>jdhjskhd asjhdjk ashjkd jkshdjksh jkhjk dhjkashdjkhasjkdhajkshdjkadjksh
+                    jkasd</td>
+                <td>12.0</td>
+                <td>5/5</td>
+            </tr>
+            <tr id="datosContenido6" onclick="verContenido()">
+                <td>
+                    <img src="//placehold.it/50x50" class="img-responsive">
+                </td>
+                <td><a href="views/content.html?id=1">Nombre</a></td>
+                <td>jdhjskhd asjhdjk ashjkd jkshdjksh jkhjk dhjkashdjkhasjkdhajkshdjkadjksh
+                    jkasd</td>
+                <td>12.0</td>
+                <td>5/5</td>
+            </tr>
+        </tbody>
+        <tbody>
+            <tr href="views/content.html?id=1" id="datosContenido7" onclick="verContenido()">
+                <td>
+                    <img src="//placehold.it/50x50" class="img-responsive">
+                </td>
+                <td><a href="views/content.html?id=1">Nombre</a></td>
+                <td>jdhjskhd asjhdjk ashjkd jkshdjksh jkhjk dhjkashdjkhasjkdhajkshdjkadjksh
+                    jkasd</td>
+                <td>4.0</td>
+                <td>2/5</td>
+            </tr>
+            <tr id="datosContenido6" onclick="verContenido()">
+                <td>
+                    <img src="//placehold.it/50x50" class="img-responsive">
+                </td>
+                <td><a href="views/content.html?id=1">Nombre</a></td>
+                <td>jdhjskhd asjhdjk ashjkd jkshdjksh jkhjk dhjkashdjkhasjkdhajkshdjkadjksh
+                    jkasd</td>
+                <td>Gratis</td>
+                <td>4/5</td>
+            </tr>
+            <tr id="datosContenido6" onclick="verContenido()">
+                <td>
+                    <img src="//placehold.it/50x50" class="img-responsive">
+                </td>
+                <td><a href="views/content.html?id=1">Nombre</a></td>
+                <td>jdhjskhd asjhdjk ashjkd jkshdjksh jkhjk dhjkashdjkhasjkdhajkshdjkadjksh
+                    jkasd</td>
+                <td>12.0</td>
+                <td>5/5</td>
+            </tr>
+            <tr id="datosContenido6" onclick="verContenido()">
+                <td><img src="//placehold.it/50x50" class="img-responsive"></td>
+                <td><a href="views/content.html?id=1">Nombre</a></td>
+                <td>jdhjskhd asjhdjk ashjkd jkshdjksh jkhjk dhjkashdjkhasjkdhajkshdjkadjksh
+                    jkasd</td>
+                <td>12.0</td>
+                <td>5/5</td>
+            </tr>
+            <tr id="datosContenido6" onclick="verContenido()">
+                <td><img src="//placehold.it/50x50" class="img-responsive"></td>
+                <td><a href="views/content.html?id=1">Nombre</a></td>
+                <td>jdhjskhd asjhdjk ashjkd jkshdjksh jkhjk dhjkashdjkhasjkdhajkshdjkadjksh
+                    jkasd</td>
+                <td>12.0</td>
+                <td>5/5</td>
+            </tr>
+        </tbody>
+    </table>
+    <div class="pagination pagination-mini" style="display: initial;">
+        <ul class="pager">
+            <li><a href="#">1</a>
+            </li>
+            <li><a href="#">2</a>
+            </li>
+            <li><a href="#">3</a>
+            </li>
+        </ul>
+    </div>
+</div>
 </body>
 
 <!-- CONFIGURAR BUSQUEDA -->
@@ -247,7 +374,7 @@
 <script src="../js/Prototipos.js"></script>
 <script src="../js/Objetos.js"></script>
 <script src="../js/holder.js"></script>
-<script src="js/blockUI.js"></script>
+<script src="../js/blockUI.js"></script>
 <script src="../js/bootstrap.js"></script>
 <script src="../js/LlamadasAjax.js"></script>
 <script src="../js/getSet.js"></script>
