--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/views/perfil.html
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/views/perfil.html
@@ -3,26 +3,16 @@
     <head>
         <meta http-equiv="content-type" content="text/html; charset=UTF-8"> 
         <meta charset="utf-8">
-        <title>Bootply.com - 3 Carousel Layout (BS 3)</title>
-        <meta name="generator" content="Bootply" />
+        <title>Perfil</title>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
-        <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" type="text/css" rel="stylesheet">
-        <!--[if lt IE 9]>
-          <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
-        <![endif]-->
-        <link rel="shortcut icon" href="/bootstrap/img/favicon.ico">
-        <link rel="apple-touch-icon" href="/bootstrap/img/apple-touch-icon.png">
-        <link rel="apple-touch-icon" sizes="72x72" href="/bootstrap/img/apple-touch-icon-72x72.png">
-        <link rel="apple-touch-icon" sizes="114x114" href="/bootstrap/img/apple-touch-icon-114x114.png">
-
-
-
-
-
-<link href="http://www.bootply.com/bootply/themes/metroid/theme.css" type="text/css" rel="stylesheet">
-
-
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" media="screen"/>
+    <link href="css/bootstrap-glyphicons.css" type="text/css" rel="stylesheet">
+    <!--[if lt IE 9]><script src="js/html5.js"></script><![endif]-->
+    <link href="css/themeProy.css" type="text/css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap-select.min.css" media="screen"/>
+    <link rel="stylesheet" type="text/css" href="css/market.css" media="screen"/>
+    <link rel="stylesheet" type="text/css" href="css/jquery-ui.css" media="screen"/>
+    <script src="js/jquery.min.js"></script>
 
         <!-- CSS code from Bootply.com editor -->
         
