--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/views/perfil.html
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/views/perfil.html
@@ -5,24 +5,17 @@
         <meta charset="utf-8">
         <title>Perfil</title>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" media="screen"/>
-    <link href="css/bootstrap-glyphicons.css" type="text/css" rel="stylesheet">
-    <!--[if lt IE 9]><script src="js/html5.js"></script><![endif]-->
-    <link href="css/themeProy.css" type="text/css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/bootstrap-select.min.css" media="screen"/>
-    <link rel="stylesheet" type="text/css" href="css/market.css" media="screen"/>
-    <link rel="stylesheet" type="text/css" href="css/jquery-ui.css" media="screen"/>
-    <script src="js/jquery.min.js"></script>
 
-        <!-- CSS code from Bootply.com editor -->
-        
-        <style type="text/css">
-            
-        </style>
+        <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" media="screen"/>
+        <link rel="stylesheet" type="text/css" href="../css/bootstrap-glyphicons.css">
+        <!--[if lt IE 9]><script src="js/html5.js"></script><![endif]-->
+        <link rel="stylesheet" type="text/css" href="../css/themeProy.css">
+        <link rel="stylesheet" type="text/css" href="../css/bootstrap-select.min.css" media="screen"/>
+        <link rel="stylesheet" type="text/css" href="../css/market.css" media="screen"/>
+        <link rel="stylesheet" type="text/css" href="../css/jquery-ui.css" media="screen"/>
+        <script src="../js/jquery.min.js"></script>
     </head>
-    
-    <!-- HTML code from Bootply.com editor -->
-    
+        
     <body  >
 <!-- BARRA DE NAVEGACION -->
     <nav id='caca' class="navbar navbar-default navbar-fixed-top" role="navigation">
@@ -61,49 +54,48 @@
             <a href="#" class="nick">nick</a>
             <a href="#" onclick="logoutUsuario()">(Logout)</a>
         </ul>
-    </nav>        
+    </nav>
 
+<div style="height:100px"></div>
 
-        
-        <div class="container">
-    <div class="row">
+<div class="container">
+  <div class="row">
         <div class="col-md-3">
-            <img src="http://placehold.it/200X150" class="img-polaroid thumbnail img-responsive">
-            <p class="lead text-center">Pelotinelli</p>
+          <p><img id="id_img_perfil" src="//placehold.it/200x200" class="img-polaroid thumbnail img-responsive" style="width: 200px;height: 200px;"></p>
+            <p id="id_nick_perfil" class="lead text-center">Pelotinelli</p>          
+        </div>   
+        <div class="col-md-7">
+            <p>Nombre<input id="id_nombre_perfil" type="text" class="form-control input-md" placeholder="Nombre" disabled="true"></p><br>
+            <p>Apellido<input id="id_apellido_perfil" class="form-control" type="text" placeholder="Apellido" disabled="true"></p><br>
+            <p>Mail<input id="id_mail_perfil" type="email" class="form-control input-md " placeholder="Mail" disabled="true"></p><br>
+            <p>Sitio Web<input id="id_sitioWeb_perfil" class="form-control" id="appendedInput" type="text" placeholder="Sitio Web" disabled="true"></p><br>
+            <p>Contraseña<input class="form-control" id="appendedInput" type="text" placeholder="Apellido" disabled="true"></p><br>
+            <p>Sexo<select id="id_sexo_perfil" class="form-control" disabled="true"><option>Hombre</option><option selected>Mujer</option><option>Otro</option></select></p><br>
+            <p>Telefono<input id="id_telefono_perfil" class="form-control" id="appendedInput" type="tel" placeholder="Telefono" disabled="true"></p><br>
+            <p>Fecha de Nacimiento<input id="id_fechaNac_perfil" class="form-control" id="appendedInput" type="date" placeholder="Fecha de Nacimiento" disabled="true"></p><br>                               
         </div>
-        <div class="col-md-9">
-            <div class="col-md-7">
-              <p>Nombre<input type="text" class="form-control input-md " placeholder="Nombre"></p><br>
-                <p>Apellido<input class="form-control" id="appendedInput" type="text" placeholder="Apellido"></p><br>
-                <p>Sexo<select class="form-control"><option>Hombre</option><option>Mujer</option><option>Otro</option></select></p><br>
-              <p>Mail<input type="email" class="form-control input-md " placeholder="Mail"></p><br>
-                <p>Telefono<input class="form-control" id="appendedInput" type="tel" placeholder="Telefono"></p><br>
-                <p>Sitio Web<input class="form-control" id="appendedInput" type="text" placeholder="Sitio Web"></p><br>
-                <p>Fecha de Nacimiento<input class="form-control" id="appendedInput" type="date" placeholder="Fecha de Nacimiento"></p><br>              
-          </div>
+        <div class="btn-group btn-group-horizontal col-md-2 pull-rigth hide">    
+            <button class="btn btn-default no-border">Editar <i class="icon-print align-top bigger-125 icon-on-right"></i></button>
         </div>
+        <div class="btn-group btn-group-horizontal col-md-2 pull-rigth ">
+           <button class="btn btn-default">G</button>
+           <button class="btn btn-default">G</button>
+        </div>    
     </div>
 </div>
-        
-        <script type='text/javascript' src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-
-
-        <script type='text/javascript' src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-
-<script type='text/javascript' src="http://maps.googleapis.com/maps/api/js?sensor=false&extension=.js&output=embed"></script>
-
-        
-        <!-- JavaScript jQuery code from Bootply.com editor -->
-        
-        <script type='text/javascript'>
-        
-        $(document).ready(function() {
-        
-            
-        
-        });
-        
-        </script>
-        
+        <script src="../js/jquery-ui.js"></script>
+        <script src="../js/globalesProyecto.js"></script>
+        <script src="../js/Prototipos.js"></script>
+        <script src="../js/Inicio.js"></script>
+        <script src="../js/holder.js"></script>
+        <script src="../js/blockUI.js"></script>
+        <script src="../js/bootstrap.js"></script>
+        <script src="../js/bootstrap-select.min.js"></script>
+        <script src="../js/Objetos.js"></script>
+        <script src="../js/LlamadasAjax.js"></script>
+        <script src="../js/getSet.js"></script>
+        <script src="../js/eventos.js"></script>
+        <script src="../js/Comunes.js"></script>
+        <script src="../js/perfil.js"></script>
     </body>
 </html>
