--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/views/content.html
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/views/content.html
@@ -109,7 +109,7 @@
 			<p id="MP_Precio" class="precioContenido"></p>
 		</div>
 	</div>
-	<div class="col-md-16" style="text-align: center">
+	<div class="col-md-16 hide" style="text-align: center">
 		<h2>Opiniones de los Usuarios</h2>
 		------------------------------------
 		<h4>Me gusta mucho este contenido :D</h4>
@@ -139,7 +139,6 @@
 </div>
 
 </body>
-
 
 <!-- CONFIGURAR BUSQUEDA -->
 <div id="configurarBusqueda" class="modal fade" tabindex="-1" role="dialog">
