--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/views/perfil.html
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/views/perfil.html
@@ -28,7 +28,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="127.0.0.1:8080/SERVER-MODULE-PRESENTATION">Market Place Tecnologo</a>
+        <a class="navbar-brand" href="localhost:8080/SERVER-MODULE-PRESENTATION">Market Place Tecnologo</a>
     </div>
   <div class="collapse navbar-collapse navbar-ex1-collapse"> 
     <ul class="navbar-form navbar-left" role="search">
@@ -52,7 +52,7 @@
     <ul class="nav navbar-nav navbar-right" id="Nick-Logout-Div" style="display: none;margin-right: initial;margin-top: 0.7em;" hidden>
         <a class="nick dropdown-toggle" data-toggle="dropdown" role="button" href="#"><i class="glyphicon glyphicon-user"></i> nick <span class="caret"></span></a>
         <ul class="dropdown-menu">
-            <li><a href="http://127.0.0.1:8080/SERVER-MODULE-PRESENTATION/proveedor/AltaContenido.html">Crear Contenido</a></li>
+            <li><a href="http://localhost:8080/SERVER-MODULE-PRESENTATION/proveedor/AltaContenido.html">Crear Contenido</a></li>
             <li><a id="dd_verPerfil" href="#">Ver Perfil</a></li>
             <li class="divider"></li>
             <li><a href="#" onclick="logoutUsuario()"><i class="glyphicon glyphicon-lock"></i> Logout</a></li>
@@ -172,6 +172,30 @@
         <div class="modal-footer">
             <button class="btn" data-dismiss="modal">Cancelar</button>
           <button class="btn btn-primary" onclick="confirmarCalificacion()">Confirmar</button>
+        </div>
+        </div>
+    </div>
+</div>
+
+<!-- GENERAR NUEVO RECLAMO -->
+<div id="div_nuevoReclamo" class="modal fade" tabindex="-1" role="dialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal">×</button>
+                <h3>Reclamos</h3>
+        </div>
+        <div class="modal-body">
+            <div class="container">
+                <p>Titulo</p>
+                <<input id="id_reclamo_titulo" type='text' class="form-control"></input>
+                <p>Plantee su problema aqui.</p>
+                <textarea id="id_reclamo_asociado" type='text' class="form-control" rows='5'></textarea>
+            </div>
+        </div>
+        <div class="modal-footer">
+            <button class="btn" data-dismiss="modal">Cancelar</button>
+          <button class="btn btn-primary" onclick="confirmarAltaReclamo()">Confirmar</button>
         </div>
         </div>
     </div>
