--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/views/perfil.html
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/views/perfil.html
@@ -188,7 +188,7 @@
         <div class="modal-body">
             <div class="container">
                 <p>Titulo</p>
-                <<input id="id_reclamo_titulo" type='text' class="form-control"></input>
+                <input id="id_reclamo_titulo" type='text' class="form-control"></input>
                 <p>Plantee su problema aqui.</p>
                 <textarea id="id_reclamo_asociado" type='text' class="form-control" rows='5'></textarea>
             </div>
