agregamos alertify y correciones varias

--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/views/content.html
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/views/content.html
@@ -11,6 +11,11 @@
 	<link rel="stylesheet" type="text/css" href="../css/bootstrap-glyphicons.css">
 	<!--[if lt IE 9]><script src="../js/html5.js"></script><![endif]-->
 	<link rel="stylesheet" type="text/css" href="../css/themeProy.css">
+
+    <link rel="stylesheet" href="../css/alertify.default.css"/>
+    <link rel="stylesheet" href="../css/alertify.bootstrap.css"/>      
+
+    <link rel="stylesheet" href="../css/alertify.core.css"/>   	
 	
 	<script src="../js/Plugins/jquery.min.js"></script>
 </head>
@@ -268,15 +273,17 @@
 	</div>
 </div>
 
-<script src="../js/Plugins/jquery-ui.js"></script>
-<script src="../js/globalesProyecto.js"></script>
-<script src="../js/Prototipos.js"></script>
-<script src="../js/Objetos.js"></script>
-<script src="../js/Plugins/holder.js"></script>
-<script src="../js/blockUI.js"></script>
-<script src="../js/Plugins/bootstrap.js"></script>
-<script src="../js/LlamadasAjax.js"></script>
-<script src="../js/getSet.js"></script>
-<script src="../js/eventos.js"></script>
-<script src="../js/Comunes.js"></script>
-<script src="../js/contenido.js"></script>
+	<script src="../js/Plugins/jquery-ui.js"></script>
+    <script src="../js/Plugins/alertify.min.js"></script>  
+	<script src="../js/Plugins/holder.js"></script>
+	<script src="../js/Plugins/bootstrap.js"></script>
+	
+	<script src="../js/globalesProyecto.js"></script>
+	<script src="../js/Prototipos.js"></script>
+	<script src="../js/Objetos.js"></script>
+	<script src="../js/blockUI.js"></script>
+	<script src="../js/LlamadasAjax.js"></script>
+	<script src="../js/getSet.js"></script>
+	<script src="../js/eventos.js"></script>
+	<script src="../js/Comunes.js"></script>
+	<script src="../js/contenido.js"></script>
